--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.html
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.html
@@ -1,9 +1,8 @@
+
 <div class="surface-0 flex justify-content-center">
     <div id="home" class="landing-wrapper overflow-hidden">
         <div class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static mb-3">
-            <a class="flex align-items-center" href="#">
-                <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Sakai Logo" height="50" class="mr-0 lg:mr-2"><span class="text-900 font-medium text-2xl line-height-3 mr-8">SAKAI</span>
-            </a>
+           
             <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden" leaveToClass="hidden" [hideOnOutsideClick]="true">
                 <i class="pi pi-bars text-4xl"></i>
             </a>
@@ -30,11 +29,11 @@
                         </a>
                     </li>
                     <li>
-                        <a (click)="router.navigate(['/landing-hackathons'])" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                        <a (click)="router.navigate(['/landing-hackathons'], {fragment: 'hackathons'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                             <span>Hackathons</span>
                         </a>
                     </li>
-
+  
                 </ul>
                 <div class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
                     <button pButton pRipple label="Login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
@@ -44,4 +43,47 @@
         </div>
     
     </div>
-</div>
+  </div>
+  <!-- Display the Hackathons -->
+  <div class="hackathon-list-container">
+    <div class="col-12 md:col-12">
+    <div class="hackathon-grid">
+      <div class="hackathon-card" *ngFor="let hackathon of hackathons">
+        <!-- Card Header with Logo -->
+        <div class="card-header">
+          <div class="logo-container">
+            <img [src]="hackathon.logo" alt="Hackathon Logo" class="card-logo">
+          </div>
+        </div>
+        
+        <!-- Card Content -->
+        <div class="card-content" [routerLink]="['/landing-hackathon', hackathon.id]">
+          <h3 class="card-title">{{ hackathon.title }}</h3>
+          
+          <div class="card-meta">
+            <span class="meta-item location">
+              <i class="pi pi-map-marker"></i> {{ hackathon.location }}
+            </span>
+            <span class="meta-item date">
+              <i class="pi pi-calendar"></i> {{ hackathon.startDate | date:'MMM d' }} - {{ hackathon.endDate | date:'MMM d' }}
+            </span>
+          </div>
+          
+          <p class="card-description">{{ (hackathon.description) || 'No description provided' }}</p>
+          
+          <div class="card-footer">
+            <span class="event-type" [ngClass]="{'online': hackathon.isOnline, 'onsite': !hackathon.isOnline}">
+              <i class="pi" [ngClass]="hackathon.isOnline ? 'pi-globe' : 'pi-building'"></i>
+              {{ hackathon.isOnline ? 'Online' : 'Onsite' }}
+            </span>
+            <span class="participants">
+              <i class="pi pi-users"></i> {{ hackathon.maxMembers }} max
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  
+  
