search option updated + pie chart hackathon analytics

--- a/src/app/demo/components/hackathons/hackathon-list/hackathon-list/hackathon-list.component.html
+++ b/src/app/demo/components/hackathons/hackathon-list/hackathon-list/hackathon-list.component.html
@@ -1,9 +1,31 @@
 <!-- Add Hackathon Button -->
 <div class="fixed-header">
+  <div class="search-container">
+    <span class="p-input-icon-left">
+      <i class="pi pi-search"></i>
+      <input type="text" pInputText [(ngModel)]="searchTerm" 
+             (input)="filterHackathons()" 
+             placeholder="Search by name..." />
+    </span>
+
+    <p-dropdown [options]="eventTypeOptions" [(ngModel)]="selectedEventType" 
+                (onChange)="filterHackathons()" 
+                placeholder="Filter by type" [showClear]="true">
+    </p-dropdown>
+
   <div class="add-button-wrapper">
     <button class="add-button" (click)="showAddHackathonForm()">
       <i class="pi pi-plus mr-2"></i> Add Hackathon
     </button>
+  </div>
+
+  
+  <div class="analytics-button-wrapper">
+    <button class="show-analytics" (click)="navigateToAnalytics()" >
+      <i class="p-button-secondary mr-2"></i> Show Analytics
+    </button>
+  </div>
+  
   </div>
 </div>
 
@@ -11,7 +33,7 @@
 <div class="hackathon-list-container">
   <div class="col-12 md:col-12">
   <div class="hackathon-grid">
-    <div class="hackathon-card" *ngFor="let hackathon of hackathons">
+    <div class="hackathon-card" *ngFor="let hackathon of filteredHackathons">
       <!-- Card Header with Logo -->
       <div class="card-header">
         <div class="logo-container">
