--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.scss
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.scss
@@ -1,9 +1,34 @@
-/* Hackathon Cards Container */
+.fixed-header { 
+  margin-top: 20px;
+  border-radius: 8px;
+  background-color: white;
+  z-index: 1000;
+  padding: 15px 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+}
+
+.search-container {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+}
+
+.search-container .p-inputtext {
+  width: 250px;
+}
+
+.search-container .p-dropdown {
+  width: 200px;
+}
+
+
 .hackathon-list-container {
     padding: 1.5rem;
     background-color: white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin-top: 50px; /* Space for the fixed button + header (adjust as needed) */
+    margin-top: 15px; /* Space for the fixed button + header (adjust as needed) */
     max-height: 700px; /* Adjust the height as needed */
     overflow-y: scroll; /* Allows scrolling */
     padding-right: 20px; 
@@ -232,19 +257,6 @@
         height: 80px;
       }
     }
-  }
-  
-  /* Fixed Header for Add Hackathon Button */
-  .fixed-header {
-    position: fixed;
-    top: 80px;
-    left: 355px;
-    right: 0;
-    border-radius: 8px;
-    background-color: white;
-    z-index: 1000; /* Make sure it's above other content */
-    padding: 10px 20px; /* Add padding to make the button look nice */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional shadow for separation */
   }
   
   /* Adjust the content below the fixed header */
