--- a/src/app/demo/components/Analytics/hackathon-analytics/hackathon-analytics.component.html
+++ b/src/app/demo/components/Analytics/hackathon-analytics/hackathon-analytics.component.html
@@ -5,6 +5,7 @@
       </div>
     </div>
     
+    <!-- Pie Chart for Online vs Onsite -->
     <div class="col-12 lg:col-6">
       <div class="card flex flex-column align-items-center">
         <h5 class="text-left w-full">Hackathon Types Distribution</h5>
@@ -21,6 +22,22 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    
+    <!-- Bar Chart for Monthly Distribution -->
+    <div class="col-12 lg:col-6">
+      <div class="card">
+        <h5 class="text-left w-full">Monthly Hackathon Distribution</h5>
+        <p-chart type="bar" [data]="barData" [options]="barOptions" [style]="{'width': '100%', 'height': '300px'}"></p-chart>
+      </div>
+    </div>
+    
+    <!-- Line Chart for Cumulative Growth -->
+    <div class="col-12">
+      <div class="card">
+        <h5 class="text-left w-full">Cumulative Hackathon Growth</h5>
+        <p-chart type="line" [data]="lineData" [options]="lineOptions" [style]="{'width': '100%', 'height': '300px'}"></p-chart>
       </div>
     </div>
   </div>
