edit+delete are updated for post

--- a/src/app/demo/components/hackathons/hackathon-details/hackathon-details.component.html
+++ b/src/app/demo/components/hackathons/hackathon-details/hackathon-details.component.html
@@ -2,7 +2,7 @@
   <div class="back-button-container">
     <button pButton type="button" icon="pi pi-arrow-left" label="Back to List" routerLink="/hackathons"></button>
   </div>
-  <button class="header-button" (click)="goToLiveStream()">Live stream</button>
+  <button class="header-button" (click)="goToLiveStream()"><i class="pi pi-video"></i>Live stream</button>
   
 </div>
 
