--- a/src/app/demo/components/hackathons/hackathon-details/hackathon-details.component.scss
+++ b/src/app/demo/components/hackathons/hackathon-details/hackathon-details.component.scss
@@ -24,6 +24,11 @@
   border-radius: 5px;
 }
 
+.pi-video{
+  margin-right: 10px;
+
+}
+
 .hackathon-details-container {
   max-width: 1200px;
   margin: 0 auto;
