--- a/src/app/demo/components/landing/landing.component.html
+++ b/src/app/demo/components/landing/landing.component.html
@@ -66,9 +66,12 @@
                         </a>
                     </li>
                 </ul>
-                <div *ngIf="isAuthenticated">
-                    <p>Welcome back, user!</p>
-                    <button (click)="logout()" class="p-button-rounded border-none font-light line-height-2 bg-red-500 text-white">Logout</button>
+                <div *ngIf="isAuthenticated" class="flex align-items-center">
+                    <p class="mr-3">Welcome back, user!</p>
+                    <button (click)="logout()" class="p-button-rounded border-none font-light line-height-2 bg-red-500 text-white mr-2">Logout</button>
+                    <button (click)="router.navigate(['/user-profile'])" class="p-button-rounded border-none font-light line-height-2 bg-green-500 text-white">
+                        Profile
+                    </button>
                 </div>
                 <div *ngIf="!isAuthenticated" class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
                     <button pButton pRipple label="Login" [routerLink]="['/auth/login']" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
