--- a/src/app/demo/components/live-stream/live-stream/live-stream.component.html
+++ b/src/app/demo/components/live-stream/live-stream/live-stream.component.html
@@ -1,6 +1,6 @@
 <div class="fixed-header">
   <div class="back-button-container">
-    <button pButton type="button" icon="pi pi-arrow-left" label="Back to Hackathon" routerLink="/hackathons/{{hackathonId}}"></button>
+    <button pButton type="button" icon="pi pi-arrow-left" label="Back to Hackathon" routerLink="/hackathon/{{hackathonId}}"></button>
   </div>
 </div>
 
