--- a/src/app/demo/components/live-stream/video-room/video-room.component.html
+++ b/src/app/demo/components/live-stream/video-room/video-room.component.html
@@ -25,7 +25,7 @@
           </button>
           <button (click)="toggleHandRaise()" [class.active]="isHandRaised" 
                   class="raise-hand">
-            <i class="pi pi-hand-stop"></i>
+            <i class="pi pi-thumbs-up"></i>
           </button>
         </div>
       </div>
