--- a/src/app/demo/components/live-stream/video-room/video-room.component.scss
+++ b/src/app/demo/components/live-stream/video-room/video-room.component.scss
@@ -175,11 +175,11 @@
   /* Chat Sidebar */
 .chat-sidebar {
     position: fixed;
-    right: -350px;
+    right: -400px;
     top: 0;
     bottom: 0;
-    width: 350px;
-    background: #2a2a2a;
+    width: 400px;
+    background: #d8d8d8;
     transition: right 0.3s ease;
     display: flex;
     flex-direction: column;
@@ -257,8 +257,9 @@
         
         &.raise-hand {
           background: transparent;
-          color: #4285f4;
-          z-index: 100;
+          color: #ffffff;
+          z-index: 1000;
+          width: 40px;
           
           &.active {
             background: rgba(115, 95, 233, 0.3);
@@ -267,6 +268,8 @@
       }
     }
   }
+
+
   
   .chat-toggle {
     position: fixed;
