--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@ $gutter: 1rem; //for primeflex grid system
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeflex/primeflex.scss";
 @import "../node_modules/primeicons/primeicons.css";
+@import "~primeicons/primeicons.css";
 
 /* Code Highlight */
 @import "../node_modules/prismjs/themes/prism-coy.css";
